fix: [AXIMST-472] fixed sidebar visibility notification

--- a/src/course-unit/sidebar/Sidebar.scss
+++ b/src/course-unit/sidebar/Sidebar.scss
@@ -28,6 +28,10 @@
         @extend %base-font-params;
       }
 
+      .course-unit-sidebar-visibility-section {
+        @extend %base-font-params;
+      }
+
       .course-unit-sidebar-location-description {
         font-size: $font-size-xs;
         line-height: $line-height-base;
